# home-financials

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/: copilot-instructions.md
doc/: home_financial_features.drawio  srs.md  unified_dia_doc.drawio
inc/: bank_account.hpp  bank_reader.hpp  canara_bank_reader.hpp  commons.hpp  family.hpp  home_manager.hpp  io_interface.hpp  member.hpp  net_worth.hpp  reader.hpp  reader_factory.hpp  reader_registration.hpp  storage_manager.hpp  terminal_io.hpp  tui_manager.hpp  ui_manager.hpp
src/: CMakeLists.txt  bank_account.cpp  bank_reader.cpp  canara_bank_reader.cpp  family.cpp  home_manager.cpp  io_interface.cpp  main.cpp  member.cpp  net_worth.cpp  reader.cpp  reader_factory.cpp  storage_manager.cpp  terminal_io.cpp  tui_manager.cpp  ui_manager.cpp
tests/: CMakeLists.txt  mock_io.cpp  mock_io.hpp  test_bank_account.cpp  test_bank_import.cpp  test_commons.cpp  test_helpers.hpp  test_home_manager.cpp  test_home_manager_networth.cpp  test_homemanager_import_by_id.cpp  test_integration_import_networth.cpp  test_net_worth.cpp  test_net_worth_class.cpp  test_reader.cpp  test_reader_and_bankreader.cpp  test_reader_factory_and_homemanager.cpp  test_storage_banklist_and_save_errors.cpp  test_storage_manager.cpp  test_tui_manager.cpp
